--- a/Kdrama2020.html
+++ b/Kdrama2020.html
@@ -1,63 +1,15 @@
 <html>
- <meta charset="UTF-8">
-  <head>
-   <title>Kdrama2020</title>
-  </head>
-  <style>
-   img {
-    border: 1px solid black;
-    border-radius: 1px;
-    padding: 1px;
-    width: 150px;
-    height: 200px;
-    }   
-   .topnav {
-    overflow: hidden;
-    background-color: #e9e9e9;
-    }
-   .topnav a {
-    float: left;
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    }
-   .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-    }
-   .topnav a.active {
-    background-color: #2196F3;
-    color: white;
-    }
-   .topnav .search-container {
-    float: right;
-    }
-   .topnav input[type=text] {
-    padding: 6px;
-    margin-top: 8px;
-    font-size: 17px;
-    border: none;
-    }
-   .topnav .search-container button {
-    float: right;
-    padding: 6px 10px;
-    margin-top: 8px;
-    margin-right: 16px;
-    background: #ddd;
-    font-size: 17px;
-    border: none;
-    cursor: pointer;
-    }
-.topnav .search-container button:hover {
-  background: #ccc;
-}
-  </style>
+ <head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="style/kdrama.css">
+  <title>Kdrama2020</title>
+ </head>
 <body>
 <div class="topnav">
- <a class="active" href="#home">Home</a>
+ <a class="active" href="#home">KoreanWave</a>
+ <a href="#Kdrama">K-Drama</a>
+ <a href="#K-Pop">K-Pop</a>
+ <a href="#Topik">Topik</a>
  <a href="#about">About</a>
  <a href="#contact">Contact</a>
  <div class="search-container">
@@ -69,213 +21,313 @@
 </div>
 <table>
  <tr><th><figure>
-  <img src="HospitalPlaylist.jpeg" alt="HospitalPlaylist">
-  <figcaption>Hospital Playlist</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/HospitalPlaylist.jpeg" alt="HospitalPlaylist">
+   <figcaption>Hospital Playlist</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="APieceOfYourMind.jpg" alt="APieceOfYourMind">
-  <figcaption>A Piece Of Your Mind</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/APieceOfYourMind.jpg" alt="APieceOfYourMind">
+   <figcaption>A Piece Of Your Mind</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="BeautifulLoveWonderfulLife.jpg" alt="BeautifulLoveWonderfulLife">
-  <figcaption>Beautiful Love Wonderful Life</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/BeautifulLoveWonderfulLife.jpg" alt="BeautifulLoveWonderfulLife">
+   <figcaption>Beautiful Love Wonderful Life</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="BlackDogBeingATeacher.jpg" alt="BlackDogBeingATeacher">
-  <figcaption>Black Dog Being A Teacher</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/BlackDogBeingATeacher.jpg" alt="BlackDogBeingATeacher">
+   <figcaption>Black Dog Being A Teacher</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="BornAgain.jpg" alt="BornAgain">
-  <figcaption>Born Again</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/BornAgain.jpg" alt="BornAgain">
+   <figcaption>Born Again</figcaption>
+  </a>
  </figure></th></tr>
 
  <tr><th><figure>
-  <img src="Chocolate.jpg" alt="Chocolate">
-  <figcaption>Chocolate</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/Chocolate.jpg" alt="Chocolate">
+   <figcaption>Chocolate</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="DoDoSolSolLaLaSol.jpg" alt="DoDoSolSolLaLaSol">
-  <figcaption>Do Do Sol Sol La La Sol</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/DoDoSolSolLaLaSol.jpg" alt="DoDoSolSolLaLaSol">
+   <figcaption>Do Do Sol Sol La La Sol</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="DrRomantic2.jpg" alt="DrRomantic2">
-  <figcaption>Dr.Romantic 2</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/DrRomantic2.jpg" alt="DrRomantic2">
+   <figcaption>Dr.Romantic 2</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="EccentricChefMoon.jpg" alt="EccentricChefMoon">
-  <figcaption>Eccentric Chef Moon</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/EccentricChefMoon.jpg" alt="EccentricChefMoon">
+   <figcaption>Eccentric Chef Moon</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="ExtraCurricular.jpg" alt="ExtraCurricular">
-  <figcaption>Extra Curricular</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/ExtraCurricular.jpg" alt="ExtraCurricular">
+   <figcaption>Extra Curricular</figcaption>
+  </a>
  </figure></th></tr>
 
  <tr><th><figure>
-  <img src="FindMeInYourMemory.jpg" alt="FindMeInYourMemory">
-  <figcaption>Find Me In YourMemory</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/FindMeInYourMemory.jpg" alt="FindMeInYourMemory">
+   <figcaption>Find Me In YourMemory</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="FlowerOfEvil.jpg" alt="FlowerOfEvil">
-  <figcaption>Flower Of Evil</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/FlowerOfEvil.jpg" alt="FlowerOfEvil">
+   <figcaption>Flower Of Evil</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="Forest.jpg" alt="Forest">
-  <figcaption>Forest</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/Forest.jpg" alt="Forest">
+   <figcaption>Forest</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="GoodCasting.jpg" alt="GoodCasting">
-  <figcaption>Good Casting</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/GoodCasting.jpg" alt="GoodCasting">
+   <figcaption>Good Casting</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="HiByeMama.jpg" alt="HiByeMama">
-  <figcaption>Hi Bye Mama</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/HiByeMama.jpg" alt="HiByeMama">
+   <figcaption>Hi Bye Mama</figcaption>
+  </a>
  </figure></th></tr>
 
 <tr><th><figure>
-  <img src="HowToBuyAFriend.jpg" alt="HowToBuyAFriend">
-  <figcaption>How To Buy A Friend</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/HowToBuyAFriend.jpg" alt="HowToBuyAFriend">
+   <figcaption>How To Buy A Friend</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="Hyena.jpg" alt="Hyena">
-  <figcaption>Hyena</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/Hyena.jpg" alt="Hyena">
+   <figcaption>Hyena</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="ItIsOkayNotToBeOkay.jpg" alt="ItIsOkayNotToBeOkay">
-  <figcaption>It Is Okay Not To Be Okay</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/ItIsOkayNotToBeOkay.jpg" alt="ItIsOkayNotToBeOkay">
+   <figcaption>It Is Okay Not To Be Okay</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="Kingdom.jpg" alt="Kingdom">
-  <figcaption>Kingdom</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/Kingdom.jpg" alt="Kingdom">
+   <figcaption>Kingdom</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="KingMakerTheChangeOfDestiny.jpg" alt="KingMakerTheChangeOfDestiny">
-  <figcaption>King Maker The Change Of Destiny</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/KingMakerTheChangeOfDestiny.jpg" alt="KingMakerTheChangeOfDestiny">
+   <figcaption>King Maker The Change Of Destiny</figcaption>
+  </a>
  </figure></th></tr>
 
 <tr><th><figure>
-  <img src="KkondaeIntern.jpg" alt="KkondaeIntern">
-  <figcaption>Kkondae Intern</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/KkondaeIntern.jpg" alt="KkondaeIntern">
+   <figcaption>Kkondae Intern</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="LoveAlarm.jpg" alt="LoveAlarm">
-  <figcaption>Love Alarm</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/NobodyKnows.jpg" alt="NobodyKnows">
+   <figcaption>NobodyKnows</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="Memorist.jpg" alt="Memorist">
-  <figcaption>Memorist</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/Memorist.jpg" alt="Memorist">
+   <figcaption>Memorist</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="MenAreMen.jpg" alt="MenAreMen">
-  <figcaption>Men Are Men</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/MenAreMen.jpg" alt="MenAreMen">
+   <figcaption>Men Are Men</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="MyHoloLove.jpg" alt="MyHoloLove">
-  <figcaption>My Holo Love</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/MyHoloLove.jpg" alt="MyHoloLove">
+   <figcaption>My Holo Love</figcaption>
+  </a>
  </figure></th></tr>
 
 <tr><th><figure>
-  <img src="MysticPopUpBar.jpg" alt="MysticPopUpBar">
-  <figcaption>Mystic Pop Up Bar</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/MysticPopUpBar.jpg" alt="MysticPopUpBar">
+   <figcaption>Mystic Pop Up Bar</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="MyUnfamiliarFamily.jpg" alt="MyUnfamiliarFamily">
-  <figcaption>My Unfamiliar Family</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/MyUnfamiliarFamily.jpg" alt="MyUnfamiliarFamily">
+   <figcaption>My Unfamiliar Family</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="OhMyBaby.jpg" alt="OhMyBaby">
-  <figcaption>Oh My Baby</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/OhMyBaby.jpg" alt="OhMyBaby">
+   <figcaption>Oh My Baby</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="OnceAgain.jpg" alt="OnceAgain">
-  <figcaption>Once Again</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/OnceAgain.jpg" alt="OnceAgain">
+   <figcaption>Once Again</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="PrivateLives.jpg" alt="PrivateLives">
-  <figcaption>Private Lives</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/PrivateLives.jpg" alt="PrivateLives">
+   <figcaption>Private Lives</figcaption>
+  </a>
  </figure></th></tr>
 
 <tr><th><figure>
-  <img src="PsychopathDiary.jpg" alt="PsychopathDiary">
-  <figcaption>Psychopath Diary</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/PsychopathDiary.jpg" alt="PsychopathDiary">
+   <figcaption>Psychopath Diary</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="RecordOfYouth.jpg" alt="RecordOfYouth">
-  <figcaption>Record Of Youth</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/RecordOfYouth.jpg" alt="RecordOfYouth">
+   <figcaption>Record Of Youth</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="Rugal.jpg" alt="Rugal">
-  <figcaption>Rugal</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/Rugal.jpg" alt="Rugal">
+   <figcaption>Rugal</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="Startup.jpg" alt="Startup">
-  <figcaption>Startup</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/Startup.jpg" alt="Startup">
+   <figcaption>Startup</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="StoveLeague.jpg" alt="StoveLeague">
-  <figcaption>Stove League</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/StoveLeague.jpg" alt="StoveLeague">
+   <figcaption>Stove League</figcaption>
+  </a>
  </figure></th></tr>
 
 <tr><th><figure>
-  <img src="SweetMunchies.jpg" alt="SweetMunchies">
-  <figcaption>Sweet Munchies</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/SweetMunchies.jpg" alt="SweetMunchies">
+   <figcaption>Sweet Munchies</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="TeamBulldogOffDutyInvestigation.jpg" alt="TeamBulldogOffDutyInvestigation">
-  <figcaption>Team Bulldog Off Duty Investigation</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/TeamBulldogOffDutyInvestigation.jpg" alt="TeamBulldogOffDutyInvestigation">
+   <figcaption>Team Bulldog Off Duty Investigation</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="TellMeWhatYouSaw.jpg" alt="TellMeWhatYouSaw">
-  <figcaption>Tell Me What You Saw</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/TellMeWhatYouSaw.jpg" alt="TellMeWhatYouSaw">
+   <figcaption>Tell Me What You Saw</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="TheGameTowardsZero.jpg" alt="TheGameTowardsZero">
-  <figcaption>The Game Towards Zero</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/TheGameTowardsZero.jpg" alt="TheGameTowardsZero">
+   <figcaption>The Game Towards Zero</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="TheKing.jpg" alt="TheKing">
-  <figcaption>TheKing</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/TheKing.jpg" alt="TheKing">
+   <figcaption>TheKing</figcaption>
+  </a>
  </figure></th></tr>
 
 <tr><th><figure>
-  <img src="TheSchoolNurseFiles.jpg" alt="TheSchoolNurseFiles">
-  <figcaption>The School Nurse Files</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/TheSchoolNurseFiles.jpg" alt="TheSchoolNurseFiles">
+   <figcaption>The School Nurse Files</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="TheWorldOfTheMarried.jpg" alt="TheWorldOfTheMarried">
-  <figcaption>The World Of The Married</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/TheWorldOfTheMarried.jpg" alt="TheWorldOfTheMarried">
+   <figcaption>The World Of The Married</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="Train.jpg" alt="Train">
-  <figcaption>Train</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/Train.jpg" alt="Train">
+   <figcaption>Train</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="WasItLove.jpg" alt="WasItLove">
-  <figcaption>Was It Love</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/WasItLove.jpg" alt="WasItLove">
+   <figcaption>Was It Love</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="WhenIWasMostBeautiful.jpg" alt="WhenIWasMostBeautiful">
-  <figcaption>WhenIWasMostBeautiful</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/WhenIWasMostBeautiful.jpg" alt="WhenIWasMostBeautiful">
+   <figcaption>WhenIWasMostBeautiful</figcaption>
+  </a>
  </figure></th></tr>
 
 <tr><th><figure>
-  <img src="WhenTheWeatherIsFine.jpg" alt="WhenTheWeatherIsFine">
-  <figcaption>When The Weather Is Fine</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/WhenTheWeatherIsFine.jpg" alt="WhenTheWeatherIsFine">
+   <figcaption>When The Weather Is Fine</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="WhenYouLoveBlooms.jpg" alt="WhenYouLoveBlooms">
-  <figcaption>When You Love Blooms</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/WhenYouLoveBlooms.jpg" alt="WhenYouLoveBlooms">
+   <figcaption>When You Love Blooms</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="WhereYourEyesLinger.jpg" alt="Where Your Eyes Linger">
-  <figcaption>Where Your Eyes Linger</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/WhereYourEyesLinger.jpg" alt="Where Your Eyes Linger">
+   <figcaption>Where Your Eyes Linger</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="CrashLandingOnYou.png" alt="CrashLandingOnYou">
-  <figcaption>Crash Landing On You</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/CrashLandingOnYou.png" alt="CrashLandingOnYou">
+   <figcaption>Crash Landing On You</figcaption>
+  </a>
  </figure></th>
  <th><figure>
-  <img src="ItaewonClass.png" alt="ItaewonClass">
-  <figcaption>Itaewon Class</figcaption>
+  <a href="#">
+   <img src="자료/K-Drama2020/ItaewonClass.png" alt="ItaewonClass">
+   <figcaption>Itaewon Class</figcaption>
+  </a>
  </figure></th></tr>
 </table>
 </body>
