--- a/KdramaSelectYear.html
+++ b/KdramaSelectYear.html
@@ -2,16 +2,16 @@
  <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="style/kdrama.css">
-  <title>Kdrama2018</title>
+  <title>KdramaSelectYear</title>
  </head>
 <body>
 <div class="topnav">
  <a class="active" href="#home">KoreanWave</a>
  <a href="KdramaSelectYear.html">K-Drama</a>
- <a href="#K-Pop">K-Pop</a>
- <a href="#Topik">Topik</a>
- <a href="#about">About</a>
- <a href="#contact">Contact</a>
+ <a href="KpopSelect.html">K-Pop</a>
+ <a href="TopikSelect.html">Topik</a>
+ <a href="About.html">About</a>
+ <a href="Contact.html">Contact</a>
  <div class="search-container">
   <form action="#">
    <input type="text" placeholder="Search.." name="search">
