--- a/Kdrama2019.html
+++ b/Kdrama2019.html
@@ -8,10 +8,10 @@
 <div class="topnav">
  <a class="active" href="#home">KoreanWave</a>
  <a href="KdramaSelectYear.html">K-Drama</a>
- <a href="#K-Pop">K-Pop</a>
- <a href="#Topik">Topik</a>
- <a href="#about">About</a>
- <a href="#contact">Contact</a>
+ <a href="KpopSelect.html">K-Pop</a>
+ <a href="TopikSelect.html">Topik</a>
+ <a href="About.html">About</a>
+ <a href="Contact.html">Contact</a>
  <div class="search-container">
   <form action="#">
    <input type="text" placeholder="Search.." name="search">
