--- a/Contact.html
+++ b/Contact.html
@@ -19,5 +19,25 @@
   </form>
  </div>
 </div>
+<table>
+ <tr><th><figure>
+  <a href="https://www.facebook.com/profile.php?id=100014325998663">
+   <img src="자료/Contact/FacebookLogo.png" alt="FacebookLogo">
+   <figcaption>ID:Altanzul</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="https://www.instagram.com/jlml_h/">
+   <img src="자료/Contact/InstagramLogo.png" alt="InstagramLogo">
+   <figcaption>ID:jlml_h</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="https://mail.google.com/">
+   <img src="자료/contact/GmailLogo.png" alt="GmailLogo" class="gmail">
+   <figcaption>Gmail Address:khanahrim@gmail.com</figcaption>
+  </a>
+ </figure></th></tr>
+</table>
 </body>
 </html>
